# PyMidiDefs

./: LICENSE  README.md  pyproject.toml
pymididefs/: __init__.py  cc.py  ci.py  drums.py  gm.py  meta.py  notes.py  rpn.py  status.py  ump.py
tests/: test_cc.py  test_ci.py  test_drums.py  test_gm.py  test_meta.py  test_notes.py  test_rpn.py  test_status.py  test_ump.py
